--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=server
+
+spring.datasource.url=jdbc:h2:mem:eCommerce
+spring.datasource.driver-class-name=org.h2.Driver
+
+spring.jpa.show-sql=true
