--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.datasource.url=jdbc:h2:mem:eCommerce
 spring.datasource.driver-class-name=org.h2.Driver
 
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.defer-datasource-initialization=true
