--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.defer-datasource-initialization=true
+
+
+spring.security.user.name=admin
+spring.security.user.password=admin
